Day7 update result cells

--- a/day7_sequential_labeling_ner/day7_2_feedforward_window_classification_ner.ipynb
+++ b/day7_sequential_labeling_ner/day7_2_feedforward_window_classification_ner.ipynb
@@ -13,9 +13,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "soynlp=0.0.492\n",
+      "added lovit_textmining_dataset\n",
+      "[Noun Extractor] use default predictors\n",
+      "[Noun Extractor] num features: pos=3929, neg=2321, common=107\n",
+      "[Noun Extractor] counting eojeols\n",
+      "[EojeolCounter] n eojeol = 403896 from 223357 sents. mem=0.226 Gb                    \n",
+      "[Noun Extractor] complete eojeol counter -> lr graph\n",
+      "[Noun Extractor] has been trained. #eojeols=4434442, mem=0.954 Gb\n",
+      "[Noun Extractor] batch prediction was completed for 119705 words\n",
+      "[Noun Extractor] checked compounds. discovered 70639 compounds\n",
+      "[Noun Extractor] postprocessing detaching_features : 109312 -> 92205\n",
+      "[Noun Extractor] postprocessing ignore_features : 92205 -> 91999\n",
+      "[Noun Extractor] postprocessing ignore_NJ : 91999 -> 90643\n",
+      "[Noun Extractor] 90643 nouns (70639 compounds) with min frequency=1\n",
+      "[Noun Extractor] flushing was done. mem=1.146 Gb                    \n",
+      "[Noun Extractor] 76.63 % eojeols are covered\n"
+     ]
+    }
+   ],
    "source": [
     "import config\n",
     "from navernews_10days import get_news_paths\n",
@@ -43,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Vocab(count:10, index:35000, sample_int:4294967296)'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str(word2vec.wv.vocab[word2vec.wv.index2word[35000]])"
    ]
@@ -82,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/gensim/matutils.py:737: FutureWarning: Conversion of the second argument of issubdtype from `int` to `np.signedinteger` is deprecated. In future, it will be treated as `np.int64 == np.dtype(int).type`.\n",
+      "  if np.issubdtype(vec.dtype, np.int):\n"
+     ]
+    }
+   ],
    "source": [
     "seed_words = {w for w, _ in word2vec.wv.most_similar('김무성', topn=50)}\n",
     "seed_words.update({w for w, _ in word2vec.wv.most_similar('노무현', topn=50)})\n",
@@ -141,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((184865, 400), (184865,))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X, Y, words = create_dataset(vocab_to_idx, sents, seed_words, wv_)\n",
     "X.shape, Y.shape"
@@ -224,9 +278,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/neural_network/multilayer_perceptron.py:562: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train epoch = 1 / 20, batch = 5 / 5, loss = 0.030123628954597047\n",
+      "train epoch = 2 / 20, batch = 5 / 5, loss = 0.024039307789820643\n",
+      "train epoch = 3 / 20, batch = 5 / 5, loss = 0.022244276674744426\n",
+      "train epoch = 4 / 20, batch = 5 / 5, loss = 0.018842596180440145\n",
+      "train epoch = 5 / 20, batch = 5 / 5, loss = 0.017784514394523864\n",
+      "train epoch = 6 / 20, batch = 5 / 5, loss = 0.015585111645000937\n",
+      "train epoch = 7 / 20, batch = 5 / 5, loss = 0.014611616061161743\n",
+      "train epoch = 8 / 20, batch = 5 / 5, loss = 0.014042305279238498\n",
+      "train epoch = 9 / 20, batch = 5 / 5, loss = 0.012519840851847274\n",
+      "train epoch = 10 / 20, batch = 5 / 5, loss = 0.011991350871155422\n",
+      "train epoch = 11 / 20, batch = 5 / 5, loss = 0.011581874046409077\n",
+      "train epoch = 12 / 20, batch = 5 / 5, loss = 0.010860279391383175\n",
+      "train epoch = 13 / 20, batch = 5 / 5, loss = 0.009968705727710523\n",
+      "train epoch = 14 / 20, batch = 5 / 5, loss = 0.009508829779523905\n",
+      "train epoch = 15 / 20, batch = 5 / 5, loss = 0.009257455911220751\n",
+      "train epoch = 16 / 20, batch = 5 / 5, loss = 0.009077448758193257\n",
+      "train epoch = 17 / 20, batch = 5 / 5, loss = 0.008480615280963852\n",
+      "train epoch = 18 / 20, batch = 5 / 5, loss = 0.007712492386587986\n",
+      "train epoch = 19 / 20, batch = 5 / 5, loss = 0.007850206049894028\n",
+      "train epoch = 20 / 20, batch = 5 / 5, loss = 0.007002108013128572\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "from sklearn.neural_network import MLPClassifier\n",
@@ -283,9 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch prediction 5 / 5\n"
+     ]
+    }
+   ],
    "source": [
     "def minibatch_predict(vocab_to_idx, sents, seed_words, wv_, model, n_batch_sents=50000):\n",
     "    y_prob = []\n",
@@ -314,16 +411,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5791279,)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "politician_prob.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,11 +460,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최문영 (130)\t1.000\n",
+      "구윤성 (34)\t1.000\n",
+      "민경석 (36)\t1.000\n",
+      "류효림 (74)\t0.986\n",
+      "박태훈 (45)\t0.978\n",
+      "김주형 (41)\t0.976\n",
+      "이재희 (38)\t0.974\n",
+      "윤동진 (42)\t0.952\n",
+      "이정국 (46)\t0.913\n",
+      "추연화 (150)\t0.847\n",
+      "윤창원 (56)\t0.839\n",
+      "임세영 (62)\t0.839\n",
+      "김영석 (66)\t0.818\n",
+      "최현규 (43)\t0.814\n",
+      "한윤종 (51)\t0.804\n",
+      "한혁승 (180)\t0.794\n",
+      "허경 (130)\t0.792\n",
+      "이한형 (42)\t0.786\n",
+      "손진아 (40)\t0.775\n",
+      "박홍규 (33)\t0.758\n",
+      "신웅수 (32)\t0.750\n",
+      "이지숙 (56)\t0.732\n",
+      "손형주 (89)\t0.730\n",
+      "0030 (33)\t0.727\n",
+      "김재창 (47)\t0.723\n",
+      "김나라 (42)\t0.714\n",
+      "이기범 (90)\t0.711\n",
+      "이승길 (37)\t0.703\n",
+      "김경민 (85)\t0.694\n",
+      "권현진 (111)\t0.694\n",
+      "김성진 (118)\t0.644\n",
+      "조성진 (53)\t0.642\n",
+      "이우인 (50)\t0.640\n",
+      "김풀잎 (40)\t0.625\n",
+      "김수정 (77)\t0.623\n",
+      "신소원 (38)\t0.605\n",
+      "박현민 (30)\t0.600\n",
+      "올랑드 (53)\t0.585\n",
+      "곽영래 (135)\t0.578\n",
+      "김주성 (48)\t0.562\n",
+      "신나라 (41)\t0.561\n",
+      "권현수 (36)\t0.556\n",
+      "김아름 (69)\t0.551\n",
+      "박귀임 (34)\t0.529\n",
+      "박세연 (36)\t0.528\n",
+      "이보라 (37)\t0.514\n",
+      "유엄식 (100)\t0.500\n",
+      "이지영 (42)\t0.500\n",
+      "박세완 (276)\t0.500\n",
+      "임철영 (74)\t0.500\n",
+      "조호윤 (42)\t0.500\n",
+      "장아름 (50)\t0.500\n",
+      "한경닷컴 (329)\t0.489\n",
+      "박정선 (37)\t0.486\n",
+      "박지혜 (101)\t0.485\n",
+      "이지현 (50)\t0.480\n",
+      "김현태 (70)\t0.471\n",
+      "김민영 (34)\t0.471\n",
+      "노해섭 (149)\t0.470\n",
+      "김미화 (49)\t0.469\n",
+      "장의 (186)\t0.468\n",
+      "이승현 (116)\t0.466\n",
+      "박소영 (43)\t0.465\n",
+      "남친 (39)\t0.462\n",
+      "이해인 (141)\t0.461\n",
+      "윤동주 (135)\t0.452\n",
+      "홍봉진 (53)\t0.434\n",
+      "김민규 (72)\t0.431\n"
+     ]
+    }
+   ],
    "source": [
     "pred_pos = extract(politician_prob, politician_words, min_prob=0.6)\n",
     "\n",
@@ -377,9 +560,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전두환 (14)\t0.214\n",
+      "충북도의회 (19)\t0.053\n",
+      "테메르 (21)\t0.333\n",
+      "통일부장관 (22)\t0.045\n",
+      "호세프 (31)\t0.194\n"
+     ]
+    }
+   ],
    "source": [
     "for query in '인수위원회 임종성 전두환 전북도지사 정우택 지우마 진선미 최연혜 충북경제자유구역청 충북도의회 테메르 통일부장관 호세프 황광 황주홍 후세인'.split():\n",
     "    if not query in pred_pos:\n",
@@ -397,9 +592,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/gensim/matutils.py:737: FutureWarning: Conversion of the second argument of issubdtype from `int` to `np.signedinteger` is deprecated. In future, it will be treated as `np.int64 == np.dtype(int).type`.\n",
+      "  if np.issubdtype(vec.dtype, np.int):\n"
+     ]
+    }
+   ],
    "source": [
     "seed_words = {w for w, _ in word2vec.wv.most_similar('아이오아이', topn=20)}\n",
     "seed_words = {w for w, _ in word2vec.wv.most_similar('트와이스', topn=20)}\n",
@@ -421,9 +625,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/neural_network/multilayer_perceptron.py:562: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train epoch = 1 / 20, batch = 5 / 5, loss = 0.053350934069245924\n",
+      "train epoch = 2 / 20, batch = 5 / 5, loss = 0.042205496559212744\n",
+      "train epoch = 3 / 20, batch = 5 / 5, loss = 0.03708257471960816\n",
+      "train epoch = 4 / 20, batch = 5 / 5, loss = 0.033432014348373035\n",
+      "train epoch = 5 / 20, batch = 5 / 5, loss = 0.031528370472947724\n",
+      "train epoch = 6 / 20, batch = 5 / 5, loss = 0.029480737355456765\n",
+      "train epoch = 7 / 20, batch = 5 / 5, loss = 0.027266589363529582\n",
+      "train epoch = 8 / 20, batch = 5 / 5, loss = 0.027260558323314196\n",
+      "train epoch = 9 / 20, batch = 5 / 5, loss = 0.025027976586050694\n",
+      "train epoch = 10 / 20, batch = 5 / 5, loss = 0.024923751212790484\n",
+      "train epoch = 11 / 20, batch = 5 / 5, loss = 0.023443946192445084\n",
+      "train epoch = 12 / 20, batch = 5 / 5, loss = 0.023201704083418838\n",
+      "train epoch = 13 / 20, batch = 5 / 5, loss = 0.021967246275630063\n",
+      "train epoch = 14 / 20, batch = 5 / 5, loss = 0.022427403381689545\n",
+      "train epoch = 15 / 20, batch = 5 / 5, loss = 0.020804412590573025\n",
+      "train epoch = 16 / 20, batch = 5 / 5, loss = 0.020921985152361475\n",
+      "train epoch = 17 / 20, batch = 5 / 5, loss = 0.019275614672091834\n",
+      "train epoch = 18 / 20, batch = 5 / 5, loss = 0.019576192805807833\n",
+      "train epoch = 19 / 20, batch = 5 / 5, loss = 0.018545169358491896\n",
+      "train epoch = 20 / 20, batch = 5 / 5, loss = 0.017882175994366592\n",
+      "batch prediction 5 / 5\n"
+     ]
+    }
+   ],
    "source": [
     "model = minibatch_style(vocab_to_idx, sents, seed_words, wv_)\n",
     "entertainer_prob, entertainer_words = minibatch_predict(vocab_to_idx, sents, seed_words, wv_, model)"
@@ -438,11 +678,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예정화 (50)\t0.880\n",
+      "티아라 (130)\t0.462\n",
+      "서인영 (140)\t0.443\n",
+      "화제작 (62)\t0.323\n",
+      "코스피지수 (76)\t0.276\n",
+      "허지웅 (87)\t0.276\n",
+      "현아 (155)\t0.265\n",
+      "박수진 (90)\t0.256\n",
+      "한강수상택시 (57)\t0.246\n",
+      "알맹 (53)\t0.245\n",
+      "고주원 (54)\t0.241\n",
+      "곽정은 (175)\t0.240\n",
+      "씨스타 (123)\t0.236\n",
+      "조희연 (56)\t0.232\n",
+      "이태란 (53)\t0.226\n",
+      "리더십 (160)\t0.225\n",
+      "설리 (69)\t0.217\n",
+      "검사장 (152)\t0.217\n",
+      "호텔신라 (135)\t0.215\n",
+      "삼성중공업 (80)\t0.212\n",
+      "차오루 (76)\t0.211\n",
+      "연방준비제도 (67)\t0.209\n",
+      "소나무 (117)\t0.205\n",
+      "김준수 (153)\t0.203\n",
+      "김장훈 (101)\t0.198\n",
+      "연구팀 (133)\t0.195\n",
+      "트레 (176)\t0.193\n",
+      "산업은행장 (58)\t0.190\n",
+      "나비 (75)\t0.187\n",
+      "김진솔 (75)\t0.187\n",
+      "최규선 (61)\t0.180\n",
+      "취객 (50)\t0.180\n",
+      "금융노조 (50)\t0.180\n",
+      "상추 (68)\t0.176\n",
+      "동맹들 (51)\t0.176\n",
+      "성훈 (103)\t0.175\n",
+      "평년 (92)\t0.174\n",
+      "홍진경 (58)\t0.172\n",
+      "박경리문학상 (101)\t0.168\n",
+      "소녀시대 (66)\t0.167\n",
+      "이스트소프트 (79)\t0.165\n",
+      "김병기 (152)\t0.164\n",
+      "서문탁 (215)\t0.163\n",
+      "사돈 (62)\t0.161\n",
+      "지숙 (56)\t0.161\n",
+      "강민혁 (51)\t0.157\n",
+      "국회의원들 (64)\t0.156\n",
+      "박보영 (96)\t0.156\n",
+      "레인보우 (103)\t0.155\n",
+      "설현 (58)\t0.155\n",
+      "자료 (1387)\t0.154\n",
+      "김제동 (72)\t0.153\n",
+      "코스닥지수 (53)\t0.151\n",
+      "선미 (67)\t0.149\n",
+      "스태프들 (191)\t0.147\n",
+      "도철 (89)\t0.146\n",
+      "장도연 (55)\t0.145\n",
+      "신한은행 (166)\t0.145\n",
+      "김지민 (287)\t0.143\n",
+      "진영 (303)\t0.142\n",
+      "오연서 (100)\t0.140\n",
+      "나인뮤지스 (165)\t0.139\n",
+      "문가영 (72)\t0.139\n",
+      "대원들 (52)\t0.135\n",
+      "유럽우주국 (60)\t0.133\n",
+      "불승인 (60)\t0.133\n",
+      "옥션 (98)\t0.133\n",
+      "원금 (54)\t0.130\n",
+      "합참 (85)\t0.129\n",
+      "조진웅 (72)\t0.125\n",
+      "다현 (56)\t0.125\n",
+      "박은지 (89)\t0.124\n",
+      "정인영 (89)\t0.124\n",
+      "셀트리온 (65)\t0.123\n",
+      "을지대병원 (57)\t0.123\n",
+      "효과적 (327)\t0.122\n",
+      "부산은행 (140)\t0.121\n",
+      "경기도교육청 (66)\t0.121\n",
+      "경찰 (5173)\t0.120\n",
+      "경비원 (126)\t0.119\n",
+      "스타제국 (93)\t0.118\n",
+      "제임스 (127)\t0.118\n",
+      "솔비 (51)\t0.118\n",
+      "김종민 (94)\t0.117\n",
+      "손호영 (180)\t0.117\n",
+      "원심 (69)\t0.116\n",
+      "산전 (156)\t0.115\n",
+      "나다 (78)\t0.115\n",
+      "김명민 (87)\t0.115\n",
+      "이성호 (87)\t0.115\n",
+      "전경 (149)\t0.114\n",
+      "서장 (53)\t0.113\n",
+      "코스피 (249)\t0.112\n",
+      "빅스 (179)\t0.112\n",
+      "경찰관들 (171)\t0.111\n",
+      "손예진 (162)\t0.111\n",
+      "중앙응급의료위원회 (55)\t0.109\n",
+      "기안84 (138)\t0.109\n",
+      "김가연 (185)\t0.108\n",
+      "아우디폭스바겐코리아 (139)\t0.108\n",
+      "복실 (427)\t0.108\n",
+      "유재석 (65)\t0.108\n",
+      "배두나 (56)\t0.107\n",
+      "유해진 (140)\t0.107\n",
+      "임우재 (272)\t0.107\n",
+      "금감원 (122)\t0.107\n",
+      "삼성화재 (85)\t0.106\n",
+      "오랜만 (173)\t0.104\n",
+      "텔레콤 (402)\t0.102\n",
+      "연준 (206)\t0.102\n",
+      "용산 (59)\t0.102\n",
+      "관람객들 (118)\t0.102\n",
+      "이웃들 (59)\t0.102\n",
+      "동부대우전자 (69)\t0.101\n",
+      "현대건설 (69)\t0.101\n",
+      "경기도지사 (89)\t0.101\n",
+      "부산경찰청 (70)\t0.100\n",
+      "금융지주 (50)\t0.100\n",
+      "유럽중앙은행 (90)\t0.100\n",
+      "감사원 (70)\t0.100\n",
+      "문준영 (50)\t0.100\n",
+      "남성들 (121)\t0.099\n",
+      "국립과학수사연구원 (91)\t0.099\n",
+      "오윤아 (61)\t0.098\n",
+      "롯데홀딩스 (51)\t0.098\n",
+      "한국전력 (92)\t0.098\n",
+      "김소현 (72)\t0.097\n",
+      "서울시장 (124)\t0.097\n",
+      "병무청 (62)\t0.097\n",
+      "나리 (248)\t0.097\n",
+      "비주류 (52)\t0.096\n",
+      "유시민 (52)\t0.096\n",
+      "관광객들 (189)\t0.095\n",
+      "여자들 (63)\t0.095\n",
+      "공정거래위원회 (95)\t0.095\n",
+      "제아 (53)\t0.094\n",
+      "리얼미터 (96)\t0.094\n",
+      "10회 (64)\t0.094\n",
+      "야놀자 (54)\t0.093\n",
+      "김효진 (54)\t0.093\n",
+      "베이지북 (175)\t0.091\n",
+      "기상청 (274)\t0.091\n",
+      "발족 (66)\t0.091\n",
+      "최고위원 (55)\t0.091\n",
+      "윤도현 (77)\t0.091\n",
+      "경장 (56)\t0.089\n",
+      "건설사들 (56)\t0.089\n",
+      "산림청 (91)\t0.088\n",
+      "합동참모본부 (81)\t0.086\n",
+      "검찰 (2400)\t0.086\n",
+      "연구진 (151)\t0.086\n",
+      "전남대병원 (105)\t0.086\n",
+      "타인 (70)\t0.086\n",
+      "조재현 (70)\t0.086\n",
+      "수지 (135)\t0.081\n",
+      "육군 (86)\t0.081\n",
+      "대전시 (74)\t0.081\n",
+      "이철성 (136)\t0.081\n",
+      "환자들 (112)\t0.080\n",
+      "엄마들 (112)\t0.080\n",
+      "러에코 (50)\t0.080\n",
+      "김수현 (100)\t0.080\n",
+      "최대주주 (163)\t0.080\n",
+      "질병관리본부 (63)\t0.079\n",
+      "중소기업중앙회 (63)\t0.079\n",
+      "도민 (63)\t0.079\n",
+      "안개 (177)\t0.079\n",
+      "강타 (127)\t0.079\n",
+      "황보 (51)\t0.078\n",
+      "메르세데스 (64)\t0.078\n",
+      "피에스타 (64)\t0.078\n",
+      "대원 (78)\t0.077\n",
+      "중환자실 (52)\t0.077\n"
+     ]
+    }
+   ],
    "source": [
     "pred_pos = extract(entertainer_prob, entertainer_words, min_prob=0.85)\n",
     "\n",
@@ -453,6 +873,13 @@
     "        continue\n",
     "    print('{} ({})\\t{:.3f}'.format(word, count, prob))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
