Move day3_classifiers to day2_classifiers

--- a/day3_classifiers/day3_0_logistic_regression_and_regularization_for_sentence_classification.ipynb
+++ b/day3_classifiers/day3_0_logistic_regression_and_regularization_for_sentence_classification.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.20.3\n"
+      "0.21.3\n"
      ]
     }
    ],
@@ -394,9 +394,10 @@
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=None, solver='warn',\n",
-       "          tol=0.0001, verbose=True, warm_start=False)"
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=True,\n",
+       "                   warm_start=False)"
       ]
      },
      "execution_count": 12,
@@ -745,9 +746,10 @@
      "data": {
       "text/plain": [
        "LogisticRegression(C=0.1, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l1', random_state=None, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l1',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
       ]
      },
      "execution_count": 19,
@@ -790,7 +792,7 @@
       "text: 관람객/NNG Great/SL\n",
       "--------------------------------------------------\n",
       "\n",
-      "class prob: (negative= 0.995, positive= 0.00511\n",
+      "class prob: (negative= 0.995, positive= 0.0051\n",
       "prediction = negative\n",
       "label = -1\n",
       "text: 개/NNB 거지/NNG 같/VA 은/ETM 영화/NNP 보/VV ㄹ/ETM 가치/NNG 도/JX 없/VA 는/ETM 삼류/NNG 쓰레기/NNP 영화/NNP 임/NNP ㄹㅇ/NA 걍/NA 무서움/NNG 만/JX 조장/NNG 하/XSV 고/EC 많/VA 은/ETM 의미/NNG 부여/NNG 하/XSV 려다가/EC 결말/NNG 도/JX 이상/XR 하/XSA 게/EC 끝나/VV ㄴ듯/EC\n",
@@ -819,7 +821,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nonzero (L1 logistic) = (1626,)\n",
+      "Number of nonzero (L1 logistic) = (1623,)\n",
       "Number of nonzero (L2 logistic) = (10178,)\n"
      ]
     }
@@ -850,9 +852,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost = 10, nnz = (9693,)\n",
-      "Cost = 1, nnz = (6518,)\n",
-      "Cost = 0.1, nnz = (1623,)\n"
+      "Cost = 10, nnz = (9694,)\n",
+      "Cost = 1, nnz = (6519,)\n",
+      "Cost = 0.1, nnz = (1626,)\n"
      ]
     }
    ],
