--- a/day3_classifiers/day3_2_xgboost_classifier.ipynb
+++ b/day3_classifiers/day3_2_xgboost_classifier.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.82\n",
+      "0.90\n",
       "(239708, 10178)\n",
       "[-1  1]\n"
      ]
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bst.save_model('0001.model')"
+    "bst.save_model('xgb.model')"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "loaded_bst = xgb.Booster({'nthread': 4})  # init model\n",
-    "loaded_bst.load_model('0001.model')  # load data"
+    "loaded_bst.load_model('xgb.model')  # load data"
    ]
   },
   {
@@ -277,6 +277,49 @@
     "L1 lambda = 0.1, training accuracy = 0.905064963358163, test accoracy = 0.8820658295440323\n",
     "L1 lambda = 1.0, training accuracy = 0.8995536231615346, test accoracy = 0.8841099662091694\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`predict_proba` 함수는 XGBClassifier 클래스에 구현되어 있습니다. 이전에 학습한 모델 역시 objective 를 binary 로 설정하였기 때문에 classifier 입니다. 이를 로딩한 뒤, 학습 데이터에 대한 판별 확률과 테스트 데이터에 대한 판별 확률의 평균을 확인합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier = xgb.XGBClassifier()\n",
+    "classifier.load_model('0001.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average prection probability with train data = 0.7423478960990906\n",
+      "average prection probability with test data = 0.7415752410888672\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_average_prediction_probability(classifier, x):\n",
+    "    proba = classifier.predict_proba(x)\n",
+    "    mean_proba = proba.max(axis=1).mean()\n",
+    "    return mean_proba\n",
+    "\n",
+    "print('average prection probability with train data = {}'.format(\n",
+    "    check_average_prediction_probability(classifier, x_train)))\n",
+    "print('average prection probability with test data = {}'.format(\n",
+    "    check_average_prediction_probability(classifier, x_test)))"
    ]
   },
   {
