Add comments: mean of prediction probability

--- a/day3_classifiers/day3_2_xgboost_classifier.ipynb
+++ b/day3_classifiers/day3_2_xgboost_classifier.ipynb
@@ -297,6 +297,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest 에서는 prediction probability 의 평균이 0.51 에 가까웠는데, XGBoost 는 더 큰 prediction probability 를 보여줍니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
