Day4 embedding and visualization

--- a/day4_embedding_and_visualizing/day4_0_word2vec_and_doc2vec_moviereview_(gensim_3.6).ipynb
+++ b/day4_embedding_and_visualizing/day4_0_word2vec_and_doc2vec_moviereview_(gensim_3.6).ipynb
@@ -8,7 +8,7 @@
     "\n",
     "gensim이 버전업데이트를 최근에 자주해서, 자료의 gensim version을 미리 적어둡니다. \n",
     "\n",
-    "현재 최신버전은 3.7 입니다. 이번 실습에서도 3.6 을 이용하였습니다.\n",
+    "현재 최신버전은 3.8 입니다. 이번 실습에서도 3.6 을 이용하였습니다.\n",
     "\n",
     "곧 버전이 4.0+ 으로 올라갈 것 같은데, 지금까지는 Word2Vec.most_similar () 함수를 이용하여 유사어 검색이 가능했습니다. 4.0+ 이후에 이 함수가 Word2Vec.wv.most_similar 로 옮겨집니다."
    ]
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
+      "soynlp=0.0.493\n",
       "added lovit_textmining_dataset\n",
       "Gensim version = 3.6.0\n"
      ]
@@ -149,8 +149,8 @@
       "iter=3, sents=294492 done\n",
       "iter=4, sents=294492 done\n",
       "iter=5, sents=294492 done\n",
-      "CPU times: user 48.6 s, sys: 384 ms, total: 48.9 s\n",
-      "Wall time: 21.3 s\n"
+      "CPU times: user 50.7 s, sys: 436 ms, total: 51.1 s\n",
+      "Wall time: 22.4 s\n"
      ]
     }
    ],
@@ -178,16 +178,16 @@
     {
      "data": {
       "text/plain": [
-       "[('sf영화', 0.6152645349502563),\n",
-       " ('작품', 0.523030698299408),\n",
-       " ('영화지만', 0.5129991173744202),\n",
-       " ('듯하다', 0.49572521448135376),\n",
-       " ('것은', 0.4926062226295471),\n",
-       " ('영화들', 0.4827192425727844),\n",
-       " ('장르', 0.48080986738204956),\n",
-       " ('거다', 0.4761770963668823),\n",
-       " ('것같다', 0.47002020478248596),\n",
-       " ('영화였네요', 0.45858457684516907)]"
+       "[('sf영화', 0.6216995120048523),\n",
+       " ('작품', 0.578985869884491),\n",
+       " ('명화', 0.5262651443481445),\n",
+       " ('영화들', 0.5242026448249817),\n",
+       " ('듯하다', 0.504309356212616),\n",
+       " ('거다', 0.4938274025917053),\n",
+       " ('장르', 0.4936041831970215),\n",
+       " ('영화였네요', 0.4894641935825348),\n",
+       " ('것같다', 0.4892660975456238),\n",
+       " ('영화들이', 0.47598782181739807)]"
       ]
      },
      "execution_count": 5,
@@ -207,16 +207,16 @@
     {
      "data": {
       "text/plain": [
-       "[('2D', 0.9004731178283691),\n",
-       " ('4d', 0.8950837850570679),\n",
-       " ('4dx', 0.8899409770965576),\n",
-       " ('4DX', 0.8875177502632141),\n",
-       " ('4D', 0.8743008971214294),\n",
-       " ('디지털', 0.8662890195846558),\n",
-       " ('3d', 0.8618084192276001),\n",
-       " ('쓰리디', 0.8591295480728149),\n",
-       " ('디비디', 0.8576431274414062),\n",
-       " ('4디', 0.8521292209625244)]"
+       "[('2D', 0.9034042954444885),\n",
+       " ('4DX', 0.902402400970459),\n",
+       " ('4d', 0.8975728154182434),\n",
+       " ('4dx', 0.8921607732772827),\n",
+       " ('3d', 0.8825711607933044),\n",
+       " ('VOD', 0.8695594072341919),\n",
+       " ('4D', 0.8659766316413879),\n",
+       " ('4디', 0.8553564548492432),\n",
+       " ('쓰리디', 0.8470793962478638),\n",
+       " ('포디', 0.8454238176345825)]"
       ]
      },
      "execution_count": 6,
