--- a/day4_embedding_and_visualizing/day4_a_explicit_word_representation_(pmi_svd).ipynb
+++ b/day4_embedding_and_visualizing/day4_a_explicit_word_representation_(pmi_svd).ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.491\n",
+      "soynlp=0.0.493\n",
       "added lovit_textmining_dataset\n"
      ]
     }
@@ -52,19 +52,19 @@
      "output_type": "stream",
      "text": [
       "[Noun Extractor] use default predictors\n",
-      "[Noun Extractor] num features: pos=1260, neg=1173, common=12\n",
+      "[Noun Extractor] num features: pos=3929, neg=2321, common=107\n",
       "[Noun Extractor] counting eojeols\n",
-      "[EojeolCounter] n eojeol = 687560 from 228630 sents. mem=0.181 Gb                    \n",
+      "[EojeolCounter] n eojeol = 687560 from 228630 sents. mem=0.196 Gb                    \n",
       "[Noun Extractor] complete eojeol counter -> lr graph\n",
-      "[Noun Extractor] has been trained. #eojeols=2775027, mem=1.653 Gb\n",
-      "[Noun Extractor] batch prediction was completed for 244896 words\n",
-      "[Noun Extractor] checked compounds. discovered 183564 compounds\n",
-      "[Noun Extractor] postprocessing detaching_features : 211088 -> 159349\n",
-      "[Noun Extractor] postprocessing ignore_features : 159349 -> 159153\n",
-      "[Noun Extractor] postprocessing ignore_NJ : 159153 -> 157566\n",
-      "[Noun Extractor] 157566 nouns (183564 compounds) with min frequency=1\n",
-      "[Noun Extractor] flushing was done. mem=2.006 Gb                    \n",
-      "[Noun Extractor] 74.53 % eojeols are covered\n"
+      "[Noun Extractor] has been trained. #eojeols=2775027, mem=1.668 Gb\n",
+      "[Noun Extractor] batch prediction was completed for 193198 words\n",
+      "[Noun Extractor] checked compounds. discovered 151319 compounds\n",
+      "[Noun Extractor] postprocessing detaching_features : 167318 -> 120870\n",
+      "[Noun Extractor] postprocessing ignore_features : 120870 -> 120447\n",
+      "[Noun Extractor] postprocessing ignore_NJ : 120447 -> 117740\n",
+      "[Noun Extractor] 117740 nouns (151319 compounds) with min frequency=1\n",
+      "[Noun Extractor] flushing was done. mem=2.024 Gb                    \n",
+      "[Noun Extractor] 69.13 % eojeols are covered\n"
      ]
     },
     {
@@ -107,9 +107,9 @@
      "output_type": "stream",
      "text": [
       "Create (word, contexts) matrix\n",
-      "  - counting word frequency from 228629 sents, mem=2.157 Gb\n",
-      "  - scanning (word, context) pairs from 228629 sents, mem=2.157 Gb\n",
-      "  - (word, context) matrix was constructed. shape = (30810, 30810)                    \n",
+      "  - counting word frequency from 228629 sents, mem=2.170 Gb\n",
+      "  - scanning (word, context) pairs from 228629 sents, mem=2.170 Gb\n",
+      "  - (word, context) matrix was constructed. shape = (30618, 30618)                    \n",
       "  - done\n"
      ]
     }
@@ -144,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "(30810, 30810)"
+       "(30618, 30618)"
       ]
      },
      "execution_count": 4,
@@ -179,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1302\n",
-      "1889\n"
+      "1340\n",
+      "1987\n"
      ]
     }
    ],
@@ -205,9 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -260,16 +258,16 @@
     {
      "data": {
       "text/plain": [
-       "[('블랙핑크', 0.6647859272131573),\n",
-       " ('트와이스', 0.6262975246594952),\n",
-       " ('엑소', 0.5901119271712834),\n",
-       " ('여자친구', 0.5623464164823095),\n",
-       " ('노래', 0.5616676134078805),\n",
-       " ('우리나라', 0.5489489482770429),\n",
-       " ('에이핑크', 0.5366051901750828),\n",
-       " ('아오아', 0.5336581153448168),\n",
-       " ('우리', 0.5334947525137911),\n",
-       " ('가수', 0.5308252449873944)]"
+       "[('블랙핑크', 0.6581659649921858),\n",
+       " ('트와이스', 0.6258572495971212),\n",
+       " ('엑소', 0.5828096369899102),\n",
+       " ('여자친구', 0.5788681011489352),\n",
+       " ('노래', 0.5463866900815891),\n",
+       " ('우리나라', 0.5435773641801577),\n",
+       " ('아오아', 0.5379811668561362),\n",
+       " ('우리', 0.5273834320883796),\n",
+       " ('가수', 0.5266958156561162),\n",
+       " ('새누리', 0.5220714249424844)]"
       ]
      },
      "execution_count": 7,
@@ -296,16 +294,16 @@
     {
      "data": {
       "text/plain": [
-       "[('회사', 0.815166536698036),\n",
-       " ('우리나라', 0.7957352100985269),\n",
-       " ('머리', 0.7956636660982553),\n",
-       " ('학교', 0.7854806600688846),\n",
-       " ('우리', 0.7806264137345261),\n",
-       " ('정부', 0.772928310373537),\n",
-       " ('사회', 0.7697541171327323),\n",
-       " ('이나라', 0.7691019000466983),\n",
-       " ('스크린도어', 0.7584292635755353),\n",
-       " ('뉴스', 0.756708891308895)]"
+       "[('회사', 0.8037971762424634),\n",
+       " ('우리나라', 0.7900979733733253),\n",
+       " ('머리', 0.78224110041578),\n",
+       " ('우리', 0.7763852370588487),\n",
+       " ('이나라', 0.764068648599605),\n",
+       " ('정부', 0.7632069770872995),\n",
+       " ('학교', 0.7615474449969353),\n",
+       " ('너네', 0.7518707053229157),\n",
+       " ('스크린도어', 0.7501438876269355),\n",
+       " ('새누리', 0.7406757432943758)]"
       ]
      },
      "execution_count": 8,
@@ -329,9 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from soynlp.word import pmi\n",
@@ -354,16 +350,16 @@
     {
      "data": {
       "text/plain": [
-       "[('블랙핑크', 0.17036069200581827),\n",
-       " ('트와이스', 0.16415835873231055),\n",
-       " ('ioi', 0.16198705263875812),\n",
-       " ('너무너무너무', 0.1551582738086552),\n",
-       " ('아오아', 0.14416957968213384),\n",
-       " ('블핑', 0.13958860792378958),\n",
-       " ('IOI', 0.13534074388406614),\n",
-       " ('컴백', 0.12791868758168912),\n",
-       " ('CLC', 0.12636026506255216),\n",
-       " ('신곡', 0.12568333275806576)]"
+       "[('ioi', 0.17973380445809284),\n",
+       " ('블랙핑크', 0.16560387184185066),\n",
+       " ('트와이스', 0.15580021478108652),\n",
+       " ('아오아', 0.14810905975425448),\n",
+       " ('블핑', 0.1361151825149176),\n",
+       " ('너무너무너무', 0.13231819811777146),\n",
+       " ('CLC', 0.12497139230114185),\n",
+       " ('엑소', 0.12160576569048331),\n",
+       " ('방탄', 0.11965180115621088),\n",
+       " ('트와', 0.11833934686696168)]"
       ]
      },
      "execution_count": 10,
@@ -392,16 +388,16 @@
     {
      "data": {
       "text/plain": [
-       "[('bj', 0.10852224057916593),\n",
-       " ('아프리카tv', 0.07907760372410033),\n",
-       " ('유튜브', 0.07811900708395747),\n",
-       " ('비제이', 0.07292670984989313),\n",
-       " ('수수료', 0.06970795714059574),\n",
-       " ('유투브', 0.06888458719259427),\n",
-       " ('플랫폼', 0.0678840033629654),\n",
-       " ('난민', 0.06690176683704696),\n",
-       " ('중동', 0.06468149614532082),\n",
-       " ('남미', 0.06374073204204656)]"
+       "[('비제이', 0.08428223905858767),\n",
+       " ('bj', 0.07921126656182187),\n",
+       " ('수수료', 0.0742366382647287),\n",
+       " ('중동', 0.07224957662291298),\n",
+       " ('유튜브', 0.0699636341606269),\n",
+       " ('플랫폼', 0.06782625167091183),\n",
+       " ('대도서관', 0.06712023146678547),\n",
+       " ('벌어들', 0.06647189913183482),\n",
+       " ('유투브', 0.06417289761041922),\n",
+       " ('클린', 0.061716503788260324)]"
       ]
      },
      "execution_count": 11,
@@ -425,9 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import TruncatedSVD\n",
@@ -451,16 +445,16 @@
     {
      "data": {
       "text/plain": [
-       "[('블랙핑크', 0.8162061296682889),\n",
-       " ('트와이스', 0.7910113638539613),\n",
-       " ('블핑', 0.7679792737583678),\n",
-       " ('빅뱅', 0.7438666999604329),\n",
-       " ('여자친구', 0.7364958945398206),\n",
-       " ('트와', 0.7304367399302416),\n",
-       " ('엑소', 0.7201511797130391),\n",
-       " ('ioi', 0.6927218648856788),\n",
-       " ('아오아', 0.6839129116900139),\n",
-       " ('음원', 0.6790602896134313)]"
+       "[('블랙핑크', 0.8221886084809518),\n",
+       " ('트와이스', 0.8199294129456302),\n",
+       " ('엑소', 0.7778267633296658),\n",
+       " ('블핑', 0.7608530400855736),\n",
+       " ('트와', 0.7541199119015133),\n",
+       " ('빅뱅', 0.7484418805420348),\n",
+       " ('여자친구', 0.7482774087943773),\n",
+       " ('ioi', 0.7361994618770696),\n",
+       " ('아오아', 0.7295577565551217),\n",
+       " ('음원', 0.6986996540791252)]"
       ]
      },
      "execution_count": 13,
@@ -480,16 +474,16 @@
     {
      "data": {
       "text/plain": [
-       "[('유투브', 0.4844562611869139),\n",
-       " ('tv', 0.46934051763480533),\n",
-       " ('유튜브', 0.46592377270677743),\n",
-       " ('티비', 0.44565890069529057),\n",
-       " ('jtbc', 0.4327772253591923),\n",
-       " ('TV', 0.4307487376379975),\n",
-       " ('유럽', 0.42981356172467744),\n",
-       " ('광고', 0.42824023679660894),\n",
-       " ('채널', 0.4273553543926909),\n",
-       " ('이슬람', 0.42663675730599715)]"
+       "[('유투브', 0.4826217823036061),\n",
+       " ('유튜브', 0.464966444317794),\n",
+       " ('bj', 0.44880910472880975),\n",
+       " ('후진국', 0.4455112173863023),\n",
+       " ('두테르테', 0.43944626906917605),\n",
+       " ('선진국', 0.43046926733891977),\n",
+       " ('시청자', 0.4269474442814185),\n",
+       " ('동남아', 0.42092466370405524),\n",
+       " ('티비', 0.41993878234613446),\n",
+       " ('비제이', 0.40992742546942407)]"
       ]
      },
      "execution_count": 14,
@@ -511,9 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.utils import check_random_state\n",
@@ -552,16 +544,16 @@
     {
      "data": {
       "text/plain": [
-       "[('블랙핑크', 0.7502299094221191),\n",
-       " ('트와이스', 0.7484624801094757),\n",
-       " ('블핑', 0.707471995322307),\n",
-       " ('트와', 0.6661149639890701),\n",
-       " ('ioi', 0.648183439924753),\n",
-       " ('여자친구', 0.6457042531915209),\n",
-       " ('엑소', 0.6432528443193453),\n",
-       " ('빅뱅', 0.6415343264212899),\n",
-       " ('유닛', 0.6111920479598711),\n",
-       " ('음원', 0.6021137226519814)]"
+       "[('블랙핑크', 0.7277614042462635),\n",
+       " ('트와이스', 0.7271495755184257),\n",
+       " ('블핑', 0.6758538149956077),\n",
+       " ('엑소', 0.66546668878984),\n",
+       " ('트와', 0.6457451647189192),\n",
+       " ('빅뱅', 0.6404001960216869),\n",
+       " ('여자친구', 0.6403867221157068),\n",
+       " ('ioi', 0.6364449058405858),\n",
+       " ('아오아', 0.6218681614883157),\n",
+       " ('음원', 0.602724549613785)]"
       ]
      },
      "execution_count": 16,
@@ -581,16 +573,16 @@
     {
      "data": {
       "text/plain": [
-       "[('유튜브', 0.33624725785174747),\n",
-       " ('bj', 0.33130966351946567),\n",
-       " ('유투브', 0.3286154529671751),\n",
-       " ('화질', 0.308646021163389),\n",
-       " ('아시아', 0.30832490294227555),\n",
-       " ('철구', 0.3048154094624257),\n",
-       " ('중동', 0.30134489800460185),\n",
-       " ('채널', 0.2938593187909968),\n",
-       " ('들어오면', 0.286887943546003),\n",
-       " ('광고', 0.2860743339772849)]"
+       "[('유튜브', 0.3294683772420416),\n",
+       " ('대도서관', 0.3169869641723989),\n",
+       " ('유투브', 0.30331296891926063),\n",
+       " ('후진국', 0.3012999367334608),\n",
+       " ('화질', 0.29838395327446476),\n",
+       " ('공중파', 0.2979149768784777),\n",
+       " ('bj', 0.2845229871368311),\n",
+       " ('비제이', 0.2843236436865605),\n",
+       " ('TV', 0.2806455510525242),\n",
+       " ('수익', 0.27398644322357557)]"
       ]
      },
      "execution_count": 17,
@@ -628,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
