--- a/day4_embedding_and_visualizing/day4_a_cooccurrence_matrix.ipynb
+++ b/day4_embedding_and_visualizing/day4_a_cooccurrence_matrix.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
+      "soynlp=0.0.493\n",
       "added lovit_textmining_dataset\n",
       "konlpy == 0.5.1\n"
      ]
@@ -479,8 +479,8 @@
      "output_type": "stream",
      "text": [
       "Create (word, contexts) matrix\n",
-      "  - counting word frequency from 0 sents, mem=0.510 Gb\n",
-      "  - scanning (word, context) pairs from 0 sents, mem=0.511 Gb\n",
+      "  - counting word frequency from 0 sents, mem=0.505 Gb\n",
+      "  - scanning (word, context) pairs from 0 sents, mem=0.505 Gb\n",
       "  - (word, context) matrix was constructed. shape = (19, 19)                    \n",
       "  - done\n"
      ]
@@ -542,25 +542,25 @@
     {
      "data": {
       "text/plain": [
-       "matrix([[0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0],\n",
-       "        [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0],\n",
-       "        [1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0],\n",
-       "        [1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1],\n",
-       "        [0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1],\n",
-       "        [0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
-       "        [0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0]],\n",
+       "matrix([[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0],\n",
+       "        [0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1],\n",
+       "        [0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "        [1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "        [0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]],\n",
        "       dtype=int64)"
       ]
      },
@@ -581,25 +581,25 @@
     {
      "data": {
       "text/plain": [
-       "['개통/Noun',\n",
-       " '에/Josa',\n",
-       " '적/Suffix',\n",
+       "['에/Josa',\n",
+       " '와/Josa',\n",
+       " '북한/Noun',\n",
+       " '핫라인/Noun',\n",
+       " '남북/Noun',\n",
+       " '간/Noun',\n",
+       " '개통/Noun',\n",
+       " '국무위원/Noun',\n",
+       " '인/Josa',\n",
+       " '20일/Number',\n",
+       " '사이/Noun',\n",
+       " '청와대/Noun',\n",
        " '회/Noun',\n",
+       " '적/Suffix',\n",
+       " '이/Josa',\n",
        " '정식/Noun',\n",
        " '정상/Noun',\n",
        " '됐다/Verb',\n",
-       " '역사/Noun',\n",
-       " '간/Noun',\n",
-       " '핫라인/Noun',\n",
-       " '와/Josa',\n",
-       " '사이/Noun',\n",
-       " '국무위원/Noun',\n",
-       " '북한/Noun',\n",
-       " '이/Josa',\n",
-       " '남북/Noun',\n",
-       " '인/Josa',\n",
-       " '청와대/Noun',\n",
-       " '20일/Number']"
+       " '역사/Noun']"
       ]
      },
      "execution_count": 15,
@@ -614,9 +614,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
